[tool.poetry]
name = "ukbb_data_handler"
version = "20231222.181407"
description = ""
authors = ["Volkan Ün <volkan.uen@ukdd.de>", "Dominic Arold <dominic.arold@ukdd.de>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.3.4"
pyarrow = "^7.0.0"
dask = {extras = ["diagnostics"], version = "^2022.8.1"}
pyspark = "^3.3.1"
tqdm = "^4.64.1"
numpy = "^1.23.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
